[package]
name = "adapt_chat"
version = "0.1.0"
edition = "2021"

# TODO: Add feature for HTTP
[dependencies]
bytes = "1"
essence = { version = "0.3", path = "../essence", features = ["client"] }
reqwest = { version = "0.11", default-features = false, features = ["gzip", "rustls-tls"] }
paste = "1"
serde = "1"
serde_json = "1"
simd-json = { version = "0.7", optional = true }
tokio = { version = "1.23", default-features = false, features = ["time"] }
tokio-tungstenite = { version = "0.18", optional = true }

[features]
default = []
ws = ["dep:tokio-tungstenite"]
