[package]
name = "adapt"
version = "0.0.0-alpha0"
edition = "2021"
description = "Official wrapper around for the Adapt chat platform API."
license = "MIT"
repository = "https://github.com/adaptchat/adapt-rs"

# TODO: Add feature for HTTP
[dependencies]
bytes = "1"
essence = { version = "0.3", path = "../essence", features = ["client"] }
reqwest = { version = "0.12", default-features = false, features = ["gzip", "rustls-tls"] }
paste = "1"
serde = "1"
serde_json = "1"
simd-json = { version = "0.13", optional = true }
tokio = { version = "1.23", default-features = false, features = ["time"] }
tokio-tungstenite = { version = "0.23", optional = true }

[features]
default = ["ws"]
ws = ["dep:tokio-tungstenite"]
