[package]
name = "adapt"
version = "0.0.0-alpha0"
edition = "2021"
description = "Official wrapper around for the Adapt chat platform API."
license = "MIT"
repository = "https://github.com/adaptchat/adapt-rs"

# TODO: Add feature for HTTP
[dependencies]
bytes = "1"
chrono = { version = "0.4", optional = true }
essence = { version = "0.7", features = ["client"] }
futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["gzip", "rustls-tls"] }
rmp-serde = "1.3"
secrecy = { version = "0.8", features = ["serde"] }
serde = "1"
serde_json = "1"
simd-json = { version = "0.13", optional = true }
tokio = { version = "1.23", default-features = false, features = ["macros", "time"] }
tokio-tungstenite = { version = "0.23", optional = true, features = ["native-tls"] }
url = "2.5"

[features]
default = ["ws"]
simd = ["dep:simd-json"]
ws = ["dep:tokio-tungstenite"]
chrono = ["dep:chrono"]

[patch.crates-io.essence]
git = "https://github.com/adaptchat/essence"
branch = "main"
